fixed alignment

--- a/pBay/sellers/static/styles/historial_ventas.css
+++ b/pBay/sellers/static/styles/historial_ventas.css
@@ -13,7 +13,7 @@
 .my_container {
   width: 100%;
   max-width: 960px;
-  padding: 1rem;
+  margin: 1rem auto;
 }
 
 .square {
